translations: update Chinese Simplified

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -638,17 +638,17 @@ msgid "  --no-global-tags         Don't keep global tags from the source file.\n
 msgstr "  --no-global-tags         不保留输入文件中的全局标签。\n"
 
 #: src/merge/mkvmerge.cpp:145
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                           Normalize all IETF BCP 47 language tags to either\n"
 "                           their canonical or their extended language subtags\n"
 "                           form or not at all (default: canonical form).\n"
 msgstr ""
-"  --normalize-language-ietf <canonical|extlang>\n"
-"                           将所有语言标签规范化为 IETF BCP 47\n"
-"                           最简式 (canonical) 或扩展语言子标签\n"
-"                           形式 (默认: 不作规范化变换)。\n"
+"  --normalize-language-ietf <canonical|extlang|off>\n"
+"                           将 IETF BCP 47 语言元素的值规范化为\n"
+"                           对应的最简式或扩展语言子标签形式\n"
+"                           或不作任何改动 (默认: 最简式)。\n"
 
 #: src/merge/mkvmerge.cpp:260
 #, no-c-format
@@ -7552,9 +7552,9 @@ msgid "Information"
 msgstr "信息"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "信息"
+msgstr "信息 & 警告:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -9026,9 +9026,9 @@ msgid "Normal priority"
 msgstr "常规优先级"
 
 #: src/propedit/propedit_cli_parser.cpp:272
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "将所有发生变化的元素的 IETF BCP 47 语言代码规范化为其最简式（「canonical」模式）或其扩展语言子标签形式（「extlang」模式）"
+msgstr "将所有发生变化的元素的 IETF BCP 47 语言标签规范化为其最简式 (｢canonical｣模式) 或其扩展语言子标签形式 (｢extlang｣模式) 或不作改动 (｢off｣模式)。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -11922,12 +11922,12 @@ msgstr "对应的最简式以及扩展语言子标签形式均为: %1。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr "对应的最简式为: %1。"
+msgstr "对应的最简式为: ｢%1｣。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:492
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The corresponding extended language subtags form is: %1."
-msgstr "对应的扩展语言子标签形式为: %1。"
+msgstr "对应的扩展语言子标签形式为: ｢%1｣。"
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
