translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -670,17 +670,17 @@ msgid "  --no-global-tags         Don't keep global tags from the source file.\n
 msgstr "  --no-global-tags         Non mantiene le etichette globali del file sorgente.\n"
 
 #: src/merge/mkvmerge.cpp:145
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                           Normalize all IETF BCP 47 language tags to either\n"
 "                           their canonical or their extended language subtags\n"
 "                           form or not at all (default: canonical form).\n"
 msgstr ""
-"  --normalize-language-ietf <canonical|extlang>\n"
-"                           Normalizza tutti le etichette lingua IETF BCP 47 su entrambi\n"
-"                            i loro sottotag canonici o forma lingua estesa\n"
-"                            (predefinito: nessuna normalizzazione).\n"
+"  --normalize-language-ietf <canonical|extlang|off>\n"
+"                           Normalizza tutte le etichette lingua IETF BCP 47 alla\n"
+"                          loro sotto etichette lingua in forma canonica o estesa\n"
+"                           o per niente (predefinito: forma canonica).\n"
 
 #: src/merge/mkvmerge.cpp:260
 #, no-c-format
@@ -7630,9 +7630,9 @@ msgid "Information"
 msgstr "Informazioni"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Informazioni"
+msgstr "Informazioni e avvisi:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -9105,9 +9105,9 @@ msgid "Normal priority"
 msgstr "Priorità normale"
 
 #: src/propedit/propedit_cli_parser.cpp:272
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "Normalizza tutti le etichette lingua IETF BCP 47 degli elementi modificati nella loro forma canonica (modalità 'canonical') o nella loro forma di sottotag di lingua estesa (modalità 'extlang')"
+msgstr "Normalizza tutti le etichette lingua If BCP 47 degli elementi modificati nella loro forma canonica (modalità 'canonica'), nella loro forma di sotto etichetta  lingua estesa (modalità 'extlang') o per niente (modalità'off')"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -12020,9 +12020,9 @@ msgid "The corresponding canonical form is: %1."
 msgstr "La forma canonica corrispondente è: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:492
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The corresponding extended language subtags form is: %1."
-msgstr "Il modulo sottotag della lingua estesa corrispondente: %1."
+msgstr "Il modulo sotto etichetta lingua esteso corrispondente è: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
