translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -10199,7 +10199,7 @@ msgstr "Заменить вложение новым файлом и &взять
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:178
 #, no-c-format
 msgid "Replace with canonical form once"
-msgstr ""
+msgstr "Заменить канонической формой один раз"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:181
 #, fuzzy, no-c-format
@@ -15080,7 +15080,7 @@ msgstr "кнопки"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:843
 #, no-c-format
 msgid "canonical form"
-msgstr ""
+msgstr "каноническая форма"
 
 #: src/common/kax_info.cpp:635
 #, no-c-format
@@ -15623,9 +15623,9 @@ msgid "no language selected"
 msgstr "язык не выбран"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:842
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "no normalization"
-msgstr "Информация"
+msgstr "без нормализации"
 
 #: src/common/kax_info.cpp:824
 #, no-c-format
