man page translations: update Chinese Simplified

--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -2044,13 +2044,13 @@ msgstr "将 IETF BCP 47 语言标签规范化，支持「<literal>canonical</lit
 #: doc/man/mkvmerge.xml:568
 #: doc/man/mkvpropedit.xml:411
 msgid "In the canonical form all subtags for which preferred values exist are replaced by those preferred values. This converts e.g. '<literal>zh-yue-jyutping</literal>' to '<literal>yue-jyutping</literal>' or '<literal>fr-FX</literal>' to '<literal>fr-FR</literal>'."
-msgstr "最简式模式下，所有存在推荐值（preferred values）的语言子标签都会被替换为推荐值。依规范会执行下述转换: ｢<literal>zh-yue-jyutping</literal>｣转换为｢<literal>yue-jyutping</literal>｣，｢<literal>fr-FX</literal>｣转换为｢<literal>fr-FR</literal>｣。"
+msgstr "最简式模式下，所有存在推荐值（preferred value）的语言子标签都会被替换为推荐值。依规范会执行下述转换: ｢<literal>zh-yue-jyutping</literal>｣ 转换为 ｢<literal>yue-jyutping</literal>｣，｢<literal>fr-FX</literal>｣ 转换为 ｢<literal>fr-FR</literal>｣。"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:573
 #: doc/man/mkvpropedit.xml:416
 msgid "For the extended language subtags form the canonical form is built first. Afterwards all primary languages for which an extended language subtag exists are replaced by that extended language subtag and its prefix. This converts e.g. '<literal>yue-jyutping</literal>' back to '<literal>zh-yue-jyutping</literal>' but has no effect on '<literal>fr-FR</literal>' as '<literal>fr</literal>' is not an extended language subtag."
-msgstr "扩展语言子标签形式在最简式的基础上生成。所有存在扩展语言子标签（extended language subtag）的主要语言（primary language）都被替换为子标签对应的前缀加上该子标签。该规则将｢<literal>yue-jyutping</literal>｣转回传统的｢<literal>zh-yue-jyutping</literal>｣形式，但｢<literal>fr-FR</literal>｣不会发生变化，因为｢<literal>fr</literal>｣不属于扩展语言子标签。"
+msgstr "扩展语言子标签形式在最简式的基础上生成。所有存在扩展语言子标签（extended language subtag）的主要语言（primary language）都被替换为子标签对应的前缀加上该子标签。该规则将 ｢<literal>yue-jyutping</literal>｣ 转回传统的 ｢<literal>zh-yue-jyutping</literal>｣ 形式，但 ｢<literal>fr-FR</literal>｣ 不会发生变化，因为 ｢<literal>fr</literal>｣ 不属于扩展语言子标签。"
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:584
