--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2022-02-28 23:11+0000\n"
-"Last-Translator: overdrive80 <lukillas.ole@gmail.com>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2022\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -497,15 +497,15 @@ msgstr ""
 "                           para todos los bloques.\n"
 
 #: src/merge/mkvmerge.cpp:203
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --enable-legacy-font-mime-types\n"
 "                           Use legacy font MIME types when adding new\n"
 "                           attachments as well as for existing ones.\n"
 msgstr ""
-"  --attach-file-once <archivo>\n"
-"                           Crea un archivo adjunto dentro del\n"
-"                           primer archivo Matroska escrito.\n"
+"  --enable-legacy-font-mime-types\n"
+"                           Usar tipos MIME de fuentes heredadas al añadir nuevos\n"
+"                           adjuntos así como para los existentes.\n"
 
 #: src/merge/mkvmerge.cpp:406
 #, no-c-format
@@ -700,17 +700,17 @@ msgstr ""
 "                           archivo origen.\n"
 
 #: src/merge/mkvmerge.cpp:145
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                           Normalize all IETF BCP 47 language tags to either\n"
 "                           their canonical or their extended language subtags\n"
 "                           form or not at all (default: canonical form).\n"
 msgstr ""
-"  --probe-range-percentage <percent>\n"
-"                           Establece el tamaño máximo de exploración en las\n"
-"                           pistas en porcentaje del tamaño total del archivo para\n"
-"                           cierto tipo de archivo. (default: 0.3).\n"
+"  --normalize-language-ietf <canonical|extlang|off>\n"
+"                            Normaliza todas las etiquetas de lenguaje IETF BCP 47 a\n"
+"                            su forma canónica o a sub-etiquetas de lenguaje extendido\n"
+"                            o a ninguna (por defecto: forma canónica).\n"
 
 #: src/merge/mkvmerge.cpp:260
 #, no-c-format
@@ -1973,9 +1973,9 @@ msgid "&Expand all"
 msgstr "&Expandir todo"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Subetiquetas extendidas"
+msgstr "Sub-&etiqueta de idioma extendido:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:698
 #, no-c-format
