translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -11929,7 +11929,7 @@ msgstr "La synchronisation Audio/Vidéo a peut-être été perdue."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The canonical form does use a suitable prefix."
-msgstr ""
+msgstr "La forme canonique utilise un préfixe adapté."
 
 #: src/propedit/propedit.cpp:169
 #, no-c-format
@@ -12194,9 +12194,9 @@ msgid "The extended language subtag '{}' must only be used with one of the follo
 msgstr "La sous-balise étendue de langue « {} » doit seulement être utilisée avec l'un des préfixes suivants : {}."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtags form does use a suitable prefix."
-msgstr "La sous-étiquettes de langue étendue « %1 » est obsolète."
+msgstr "La forme de sous-étiquettes de langue étendue utilise un préfixe adapté"
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -13002,7 +13002,7 @@ msgstr "Le script « %1 » est obsolète."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "Le script « %1 » ne devrait pas être utilisé pour la langue « %2 » car c'est le script avec lequel la grande majorité des documents pour cette langue est écrite."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13352,7 +13352,7 @@ msgstr "Le variant « %1 » est obsolète."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
-msgstr ""
+msgstr "Le variant « %1 » est utilisé avec des préfixes inadaptés. Les préfixes adaptés sont : %2."
 
 #: src/common/bcp47.cpp:460
 #, no-c-format
