translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"PO-Revision-Date: 2022-04-03 20:48+0200\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2022\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -11941,7 +11941,7 @@ msgstr "La sincronizzazione audio/video potrebbe essere stata persa."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The canonical form does use a suitable prefix."
-msgstr ""
+msgstr "La forma canonica usa un prefisso adatto."
 
 #: src/propedit/propedit.cpp:169
 #, no-c-format
@@ -12206,9 +12206,9 @@ msgid "The extended language subtag '{}' must only be used with one of the follo
 msgstr "Il sub tag esteso lingua \"{}\" deve essere usato solo con uno dei seguenti prefissi: {}."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtags form does use a suitable prefix."
-msgstr "Il sottotitolo \"%1 \" della lingua estesa è deprecato."
+msgstr "ILa forma sotto etichetta lingua estesa usa un prefisso adatto."
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -13015,7 +13015,7 @@ msgstr "Lo script \"%1 \" è deprecato."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "Lo script \"%1\" non deve essere usato per la lingua \"%2\" in quanto è lo script in cui è scritta la stragrande maggioranza dei documenti per questa lingua."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13368,6 +13368,8 @@ msgstr "La variante \"%1\" è deprecata."
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
 msgstr ""
+"La variante \"%1 \" è usata con prefissi che non sono adatti. \n"
+"Prefissi adatti sono: %2."
 
 #: src/common/bcp47.cpp:460
 #, no-c-format
