--- a/po/ro.po
+++ b/po/ro.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2021-05-29 21:17+0000\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Daniel <danny3@tutanota.com>, 2016-2018,2021-2022\n"
 "Language-Team: Romanian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ro/)\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -1605,7 +1605,7 @@ msgstr "&Descriere:"
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:227
 #, no-c-format
 msgid "&Detach window"
-msgstr ""
+msgstr "&Detașează fereastra"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1499
 #, no-c-format
@@ -1798,9 +1798,9 @@ msgid "&Minimum playlist duration:"
 msgstr "Durată &minimă listă de redare:"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:159
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Mode:"
-msgstr "Moduri"
+msgstr "&Mod:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:697
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:438
@@ -5213,9 +5213,9 @@ msgid "Date"
 msgstr "Dată"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:171
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Date & time"
-msgstr "Dată pornire"
+msgstr "Data și ora"
 
 #: src/mkvtoolnix-gui/jobs/model.cpp:55
 #, no-c-format
@@ -5625,9 +5625,9 @@ msgid "Do you want to continue and risk overwriting the file?"
 msgstr "Doriți să suprascrieți acest fișier?"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:502
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Do you want to continue?"
-msgstr "Doriți să suprascrieți acest fișier?"
+msgstr "Doriți să continuați?"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:621
 #, no-c-format
@@ -5759,9 +5759,9 @@ msgid "E&xpand chapter's start and end timestamps to include the minimum/maximum
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "E&xtensions:"
-msgstr "Excepții"
+msgstr "E&xtensii:"
 
 #: src/common/kax_element_names.cpp:82
 #, no-c-format
@@ -5878,9 +5878,9 @@ msgid "Either the word 'all' which selects all chapters or a comma-separated lis
 msgstr ""
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:224
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Element ID:"
-msgstr "Elemente"
+msgstr "ID element:"
 
 #: src/propedit/propedit_cli_parser.cpp:171
 #, no-c-format
@@ -5928,9 +5928,9 @@ msgid "Enable language codes from &ISO 639-3 && 639-5"
 msgstr ""
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Enabled"
-msgstr "&Activat"
+msgstr "Activat"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:183
 #, no-c-format
@@ -5963,14 +5963,14 @@ msgid "Encountered OBUs with invalid data."
 msgstr ""
 
 #: src/common/kax_element_names.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Encryption algorithm"
-msgstr "Algoritm de criptare: {0} ({1})"
+msgstr "Algoritm de criptare"
 
 #: src/common/kax_element_names.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Encryption key ID"
-msgstr "ID cheie de criptare: {0}"
+msgstr "ID cheie de criptare"
 
 #: src/mkvtoolnix-gui/chapter_editor/chapter_model.cpp:35
 #, no-c-format
@@ -6930,9 +6930,9 @@ msgid "ISO 639-2 code"
 msgstr "Cod ISO 639-2"
 
 #: src/common/iso639.cpp:43
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ISO 639-3 code"
-msgstr "Cod ISO 639-1"
+msgstr "Cod ISO 639-3"
 
 #: src/common/file_types.cpp:42
 #: src/common/file_types.cpp:90
@@ -7406,14 +7406,14 @@ msgid "Info tool"
 msgstr "Unealtă de informații"
 
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information"
-msgstr "Informații culori"
+msgstr "Informații"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Informații culori"
+msgstr "Informații și avertizări"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -7441,9 +7441,9 @@ msgid "Interface &language:"
 msgstr "&Limbă interfață:"
 
 #: src/common/kax_element_names.cpp:157
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Interlaced"
-msgstr "Întrețesut: {0}"
+msgstr "Întrețesut"
 
 #: src/extract/xtr_textsubs.cpp:139
 #, no-c-format
@@ -7975,14 +7975,14 @@ msgstr "Limbă:"
 
 #: src/mkvtoolnix-gui/chapter_editor/name_model.cpp:28
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages"
-msgstr "&Limbi"
+msgstr "Limbi"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages:"
-msgstr "Limbă:"
+msgstr "Limbi:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2091
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2134
@@ -8003,7 +8003,7 @@ msgstr "Stânga"
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:226
 #, no-c-format
 msgid "Legend:"
-msgstr ""
+msgstr "Legendă:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:69
 #, fuzzy, no-c-format
@@ -8088,7 +8088,7 @@ msgstr "Multiplexare către fișierul „%1” în directorul „%2”"
 #: src/mkvtoolnix-gui/info/tab.cpp:244
 #, no-c-format
 msgid "Loading…"
-msgstr ""
+msgstr "Se încarcă…"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2124
 #, no-c-format
@@ -14241,7 +14241,7 @@ msgstr "Variabile pentru activitățile de multiplexare"
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:218
 #, no-c-format
 msgid "Variants"
-msgstr ""
+msgstr "Variante"
 
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:120
 #, no-c-format
@@ -14520,7 +14520,7 @@ msgstr ""
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:185
 #, no-c-format
 msgid "Visible"
-msgstr ""
+msgstr "Vizibilă"
 
 #: src/common/file_types.cpp:108
 #: src/output/p_vobbtn.h:34
