translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -1661,9 +1661,9 @@ msgid "&Expand all"
 msgstr "&Развернуть все"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Соответствующая форма подтегов расширенного языка: %1."
+msgstr "Расширенный языковой под&тег:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:698
 #, no-c-format
@@ -2004,7 +2004,7 @@ msgstr "&Удалить выбранный раздел или главу"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:391
 #, no-c-format
 msgid "&Replace with normalized form"
-msgstr ""
+msgstr "&Заменить нормализованной формой"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:202
 #, no-c-format
@@ -2453,9 +2453,9 @@ msgstr "\"{0}\" не является правильным хаком.\n"
 
 #: src/merge/mkvmerge.cpp:2105
 #: src/propedit/propedit_cli_parser.cpp:224
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "'{0}' is not a valid language normalization mode.\n"
-msgstr "\"{0}\" не является правильным кодом языка ISO 639-2."
+msgstr "«{0}» не является допустимым режимом нормализации языка.\n"
 
 #: src/merge/mkvmerge.cpp:1528
 #, no-c-format
@@ -3491,12 +3491,12 @@ msgstr "Всегда спрашивать пользователя"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:179
 #, no-c-format
 msgid "Always automatically replace with canonical form"
-msgstr ""
+msgstr "Всегда автоматически заменять на каноническую форму"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:182
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Always automatically replace with extended language subtags form"
-msgstr "Соответствующая форма подтегов расширенного языка: %1."
+msgstr "Всегда автоматически заменять на форму подтегов расширенного языка"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2189
 #, no-c-format
@@ -4151,7 +4151,7 @@ msgstr "Невозможно записать дорожку {0} с CodecID \"{1
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:177
 #, no-c-format
 msgid "Canonical form"
-msgstr ""
+msgstr "Каноническая форма"
 
 #: src/common/kax_info.cpp:1333
 #: src/common/kax_info.cpp:1337
@@ -6240,14 +6240,14 @@ msgid "Exports the chapter information in the simple format used in OGM tools (C
 msgstr "Экспорт главы информации в простой формат, используемый в OGM tools (Глава01=... Глава01Имя=...)."
 
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtag"
-msgstr "Соответствующая форма подтегов расширенного языка: %1."
+msgstr "Расширенный языковой подтег"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:180
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtags form"
-msgstr "Соответствующая форма подтегов расширенного языка: %1."
+msgstr "Форма расширенного языкового подтега"
 
 #: src/common/bcp47.cpp:476
 #, no-c-format
@@ -6905,9 +6905,9 @@ msgid "ID"
 msgstr "Идентификатор"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2108
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "IETF BCP 47 &normalization mode:"
-msgstr "Режим по умолчанию редактирования языка IETF BCP 47:"
+msgstr "Режим &нормализации IETF BCP 47:"
 
 #: src/common/iso639.cpp:43
 #, no-c-format
@@ -7401,9 +7401,9 @@ msgid "Information"
 msgstr "Информация"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Информация"
+msgstr "Сведения и предупреждения:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -15193,9 +15193,9 @@ msgid "equirectangular"
 msgstr "равносторонняя проекция"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:844
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "extended language subtags form"
-msgstr "Соответствующая форма подтегов расширенного языка: %1."
+msgstr "форма расширенного языкового подтега"
 
 #: src/merge/output_control.cpp:439
 #, no-c-format
